--- a/style.css
+++ b/style.css
@@ -1,34 +1,42 @@
 *{
     margin:0;
-    font-family: cursive;
-    font-weight: 900;
+    font-family: "Tiny5";
+    font-weight: 200;
+    user-select: none;
 }
 body{
+    background-image: url("./assets/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+     /* background-color: #bde8caca; */
     height: 100vh;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     flex-direction: column;
-    padding: 0 5px;
+    padding: 20px;
+    overflow: hidden;
 }
 .container{
+    background-color: rgba(255, 255, 255, 0.1);
+    width:100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border:1px solid black;
-    border-radius: 8px;
-    padding: 5px;
-    font-size: 48px;
-    margin-bottom: 2px;
+    /* border: 2px solid gray; */
+    /* border-bottom: 2px solid gray; */
+    padding: 1% 0 2% 0;
+    font-size: 76px;
+    margin: 10% 5% 1% 5%;
 }
 .head{
-    margin-bottom: 10px;
+    font-size: 64px;
+    margin-bottom: 28px;
     text-align: center;
-}
-.life{
-    color :green;
-    font-size: 12px;
+    -webkit-text-stroke: 2px rgb(255, 255, 255);
+    text-shadow: 0 5px 2px #000;
+    letter-spacing: 2px;
 }
 .word{
     display: flex;
@@ -36,25 +44,36 @@ body{
     justify-content: center;
     align-items: center;
     padding: 5px;
+    gap: 5px;
+}
+
+#boot{
+    font-size: 72px;
+    animation: blinker 1s linear infinite;
+}
+  
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
 }
 .letter{
-    text-align: center;;
-    border:1px solid black;
+    text-align: center;
+    border: 3px solid white;
     border-radius: 8px;
     padding: 5px 10px;
     font-size: 72px;
     height: 100px;
     width: 60px;
-    margin-right: 5px;
-    margin-bottom: 2px;
 }
 .heart-el{
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
+    margin: 0 2px;
 }
 img{
-    width: 20px;
-    height: 20px;
+    height: 40px;
+    width: 40px;
 }
 #heart{
     display: flex;
@@ -64,6 +83,9 @@ img{
     margin-right: 0;
 }
 #message{
+    font-size: 24px;
+    margin-top: 10px;
+    letter-spacing: 1px;
     color: red;
 }
 .top{
@@ -74,11 +96,19 @@ img{
 .alphabet{
     display: flex;
     margin-bottom: 2px;
+    gap: 3px;
 }
 .alp{
     padding: 1px;
+    font-size: 18px;
     cursor: pointer;
+    color: aliceblue;
 }
 .alp:hover{
     color: darkgrey;
+}
+.score{
+    color : white;
+    font-size: 24px;
+    width: 170px;
 }
